expense-service update + common lib update
